@@ -47,7 +47,7 @@ frontend redis-proxy
     bind 0.0.0.0:6379
     mode tcp
 
-    timeout client  5s
+    timeout client-fin 60s
     option tcp-smart-accept
 
     use_backend cluster-redis-servers
@@ -56,9 +56,6 @@ backend cluster-redis-servers
     enabled
 
     mode tcp
-
-    timeout connect 1s
-    timeout server 5s
 
     option tcp-smart-connect
     option srvtcpka
